<resources>
    <string name="app_name" translatable="false">Ngoma</string>
    <string name="select_your_music_preferences">Select your music preferences</string>
    <string name="gospel">Gospel</string>
    <string name="reggae">Reggae</string>
    <string name="rumba">Rumba</string>
    <string name="rnb">RnB</string>
    <string name="techno">Techno</string>
    <string name="soul">Soul</string>
    <string name="country">Country</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="rock">Rock</string>
    <string name="instrumental">Instrumental</string>
    <string name="pop">Pop</string>
    <string name="skip">SKIP</string>
    <string name="continue_to_mList">continue</string>
    <string name="user_mBeater">WHAT SHOULD mBEATERS CALL YOU?</string>
    <string name="settings">My Dashboard</string>
    <string name="title_activity_music_list">Ngoma</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="app_title">Ngoma</string>
    <string name="discover">Overview</string>
    <string name="custom">Tracks</string>
    <string name="online">Online</string>
    <string name="music">Music</string>
    <string name="qod">“Where words leave off, music begins.”</string>
    <string name="motivation">Daily  motivation</string>
    <string name="_5_tracks">5 tracks</string>
    <string name="_17_tracks">17 tracks</string>
    <string name="_7_tracks">7 tracks</string>
    <string name="_8_tracks">8 tracks</string>
    <string name="recently_added">Recently added</string>
    <string name="most_played">Most played</string>
    <string name="recently_played">Recently played</string>
    <string name="my_favorites">My favorites</string>
    <string name="heinrich_heine">~Heinrich Heine</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="top_trending_songs">All time trending songs</string>
    <string name="attention">Attention</string>
    <string name="album_art">Album Art</string>
    <string name="camila">Havana</string>
    <string name="camila_cabello">Camila Cabello</string>
    <string name="account_info">Account info</string>
    <string name="email">user.ngoma@gmail.com</string>
    <string name="user_name">Ngoma User</string>
    <string name="logout">Logout</string>
    <string name="favourite_songs">Favourite Songs</string>
    <string name="no_data">No Data</string>
    <string name="cards">cards</string>
    <string name="favourite_genres">Favourite Genres</string>
    <string name="mostplayed_online">Most Played</string>
    <string name="saved_tracks">Saved Tracks</string>
    <string name="saved_lyrics">Saved Lyrics</string>
    <string name="favourite_musician">Favourite Musician</string>
    <string name="other_settings">Other Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="dialog_message">Are you sure you want to logout?</string>
    <string name="dialog_title">Ngoma</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
</resources>
